Create a Bank Documentation, amost finish
